--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,14 @@
 services:
   postgres:
-    image: 'postgres'
-    restart: always
+    image: postgres:latest
     environment:
-      - 'POSTGRES_DB=gopportunities'
-      - 'POSTGRES_PASSWORD=gopportunities'
-      - 'POSTGRES_USER=gopportunities'
+      POSTGRES_DB: postgres
+      POSTGRES_USER: cardapiogo
+      POSTGRES_PASSWORD: cardapiogo
     ports:
-      - 5432:5432
+      - "5435:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql/data
+
 volumes:
-  postgres_data:
+  postgres-data:
