--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -9,7 +9,7 @@ sql:
       go:
         package: "sqlc"
         out: "database/sqlc"
-        sql_package: "database/sql"
+        sql_package: "pgx/v5"
         emit_db_tags: true
         emit_prepared_queries: true
         emit_interface: true
