--- a/internal/database/sqlc/sqlc.yaml
+++ b/internal/database/sqlc/sqlc.yaml
@@ -1,17 +1,16 @@
 version: "2"
 sql:
   - engine: "postgresql"
-    queries: "database/sql/query.sql"
-    schema: "database/sql/schema.sql"
-    # database:
-    #   managed: true
+    queries: "../sql/query.sql"
+    schema: "../sql/schema.sql"
     gen:
       go:
         package: "sqlc"
-        out: "database/sqlc"
+        out: "./"
         sql_package: "pgx/v5"
         emit_db_tags: true
         emit_prepared_queries: true
         emit_interface: true
         emit_json_tags: true
+        emit_exact_table_names: true
         json_tags_case_style: "snake"
