chore: update env example

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
+# DATABASE
 DB_HOST=localhost
 DB_PORT=5435
 DB_NAME=postgres
 DB_USERNAME=cardapiogo
 DB_PASSWORD=cardapiogo
-MIGRATION_SOURCE_URL=./database/migrations
+MIGRATION_SOURCE_URL=internal/infra/database/migrations
+
+# API
+API_PORT=8080
