--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,20 @@ MIGRATION_SOURCE_URL=internal/infra/database/migrations
 
 # API
 API_PORT=8080
+
+# JWT
+JWT_EMISSOR=cardapiogo
+JWT_SECRET=secret
+
+# OAuth2.0
+
+## GOOGLE
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URL=http://localhost:8080/api/v1/auth/callback
+### URLS
+GOOGLE_USER_INFO_URL=https://www.googleapis.com/userinfo/v2/me
+
+
+
+
