--- a/deployments/docker-compose.yaml
+++ b/deployments/docker-compose.yaml
@@ -1,3 +1,5 @@
+version: '3.7'
+
 services:
   postgres:
     image: postgres:latest
@@ -10,5 +12,39 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
+  prometheus:
+    image: bitnami/prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus_data:/prometheus
+    ports:
+      - "9090:9090" # Expõe a porta do Prometheus para acesso via navegador
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--storage.tsdb.path=/prometheus"
+      - "--storage.tsdb.retention.time=30d"
+    networks:
+      - prometheus_network
+
+  grafana:
+    image: grafana/grafana
+    ports:
+      - "3000:3000" # Expõe a porta do Grafana para acesso via navegador
+    volumes:
+      - grafana_data:/var/lib/grafana # Persiste dados de configuração e dashboards
+    environment:
+      GF_SECURITY_ADMIN_USER: admin # Usuário admin padrão, ajuste conforme necessário
+      GF_SECURITY_ADMIN_PASSWORD: admin # Senha admin padrão, ajuste conforme necessário
+    depends_on:
+      - prometheus # Garante que o Grafana só seja iniciado após o Prometheus
+    networks:
+      - prometheus_network
+
 volumes:
   postgres-data:
+  prometheus_data:
+  grafana_data: # Define um volume para persistir os dados do Grafana
+
+networks:
+  prometheus_network:
+    driver: bridge
