--- a/configs/prometheus.yml
+++ b/configs/prometheus.yml
@@ -8,4 +8,4 @@ scrape_configs:
   - job_name: 'cardapiogo'
     metrics_path: '/api/v1/metrics'
     static_configs:
-      - targets: ['192.168.18.141:8080']
+      - targets: ['cardapiogo-api:8080']
