--- a/deployments/docker-compose.yaml
+++ b/deployments/docker-compose.yaml
@@ -1,8 +1,22 @@
 version: '3.7'
 
 services:
+
+  cardapiogo-api:
+      build:
+        context: ..
+        dockerfile: build/Dockerfile
+      env_file:
+      - ../.env
+      ports:
+        - "8080:8080"
+      depends_on:
+        - postgres
+      networks:
+      - observability
+
   postgres:
-    image: postgres:latest
+    image: postgres
     environment:
       POSTGRES_DB: postgres
       POSTGRES_USER: cardapiogo
@@ -11,40 +25,64 @@ services:
       - "5435:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
+    networks:
+      - observability
 
   prometheus:
     image: bitnami/prometheus
     volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - ../configs/prometheus.yml:/etc/prometheus/prometheus.yml
       - prometheus_data:/prometheus
     ports:
-      - "9090:9090" # Expõe a porta do Prometheus para acesso via navegador
+      - "9090:9090"
     command:
       - "--config.file=/etc/prometheus/prometheus.yml"
       - "--storage.tsdb.path=/prometheus"
       - "--storage.tsdb.retention.time=30d"
     networks:
-      - prometheus_network
+      - observability
+
+  promtail:
+    image: grafana/promtail
+    volumes:
+      - /var/log/journal:/var/log/journal
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro  # Adicione esta linha
+      - ../configs/promtail.yml:/etc/promtail/config.yml
+    command: -config.file=/etc/promtail/config.yml
+    networks:
+      - observability
+
+  loki:
+    image: grafana/loki
+    ports:
+      - 3100:3100
+    command: 
+      - -config.file=/etc/loki/local-config.yaml
+      - -print-config-stderr=true
+    networks:
+      - observability
 
   grafana:
     image: grafana/grafana
     ports:
-      - "3000:3000" # Expõe a porta do Grafana para acesso via navegador
+      - "3000:3000"
     volumes:
-      - grafana_data:/var/lib/grafana # Persiste dados de configuração e dashboards
+      - grafana_data:/var/lib/grafana
     environment:
-      GF_SECURITY_ADMIN_USER: admin # Usuário admin padrão, ajuste conforme necessário
-      GF_SECURITY_ADMIN_PASSWORD: admin # Senha admin padrão, ajuste conforme necessário
+      GF_SECURITY_ADMIN_USER: admin
+      GF_SECURITY_ADMIN_PASSWORD: admin
     depends_on:
-      - prometheus # Garante que o Grafana só seja iniciado após o Prometheus
+      - prometheus
+      - loki
     networks:
-      - prometheus_network
+      - observability
 
 volumes:
   postgres-data:
   prometheus_data:
-  grafana_data: # Define um volume para persistir os dados do Grafana
+  grafana_data:
 
 networks:
-  prometheus_network:
+  observability:
     driver: bridge
