feat: set ginMode

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,8 @@ MIGRATION_SOURCE_URL=internal/infra/database/migrations
 
 # API
 API_PORT=8080
+API_BASE_PATH=/api/v1
+API_ENVIRONMENT=PROD
 
 # JWT
 JWT_EMISSOR=cardapiogo
