--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,3 +18,6 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: oprimogusreal/cardapiogo
           tags: ${{ github.sha }}, latest
+          context: . 
+          dockerfile: ./build/Dockerfile
+          
