--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,13 +12,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: build image and push to docker hub
-        uses: docker/build-push-action@v1.1.0
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: oprimogusreal/cardapiogo-api
-          tags: ${{ github.sha }}, latest
-          context: . 
-          dockerfile: ./build/Dockerfile
-          
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./build/Dockerfile
+          push: true
+          tags: oprimogusreal/cardapiogo-api:${{ github.sha }},oprimogusreal/cardapiogo-api:latest
