--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,4 +27,4 @@ jobs:
           context: .
           file: ./build/Dockerfile
           push: true
-          tags: oprimogusreal/cardapiogo-api:${{ github.sha }},oprimogusreal/cardapiogo-api:latest
+          tags: oprimogusreal/cardapiogo-api:${{ github.sha }}
