--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,6 +12,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: '1.22.0'
+
+      - name: Run Tests
+        run: make test
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
@@ -27,4 +35,13 @@ jobs:
           context: .
           file: ./build/Dockerfile
           push: true
-          tags: ${{ vars.APP_REPO }}/${{ vars.APP_NAME }}:${{ github.sha }}
+          tags: ${{ vars.APP_REPO }}/${{ vars.APP_NAME }}:${{ github.sha }}, latest
+
+  # deploy:
+  #   name: Deploy
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
+
