--- a/deployments/docker-compose.yaml
+++ b/deployments/docker-compose.yaml
@@ -3,28 +3,11 @@ version: '3.7'
 services:
 
   cardapiogo-api:
-      build:
-        context: ..
-        dockerfile: build/Dockerfile
-      env_file:
+    image: oprimogusreal/cardapiogo-api:latest
+    env_file:
       - ../.env
-      ports:
-        - "8080:8080"
-      depends_on:
-        - postgres
-      networks:
-      - observability
-
-  postgres:
-    image: postgres
-    environment:
-      POSTGRES_DB: postgres
-      POSTGRES_USER: cardapiogo
-      POSTGRES_PASSWORD: cardapiogo
     ports:
-      - "5435:5432"
-    volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - "8080:8080"
     networks:
       - observability
 
