--- a/deployments/docker-compose.yaml
+++ b/deployments/docker-compose.yaml
@@ -4,8 +4,31 @@ services:
 
   cardapiogo-api:
     image: oprimogusreal/cardapiogo-api:latest
-    env_file:
-      - ../.env
+    environment:
+      # APP
+      - APP_REPO=${APP_REPO}
+      - APP_NAME=${APP_NAME}
+      # DATABASE
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_NAME=${DB_NAME}
+      - DB_USERNAME=${DB_USERNAME}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - MIGRATION_SOURCE_URL=${MIGRATION_SOURCE_URL}
+      # API
+      - API_PORT=${API_PORT}
+      - API_BASE_PATH=${API_BASE_PATH}
+      - API_ENVIRONMENT=${API_ENVIRONMENT}
+      # JWT
+      - JWT_EMISSOR=${JWT_EMISSOR}
+      - JWT_SECRET=${JWT_SECRET}
+      # OAuth2.0
+      ## GOOGLE
+      - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+      - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
+      - GOOGLE_REDIRECT_URL=${GOOGLE_REDIRECT_URL}
+      ### URLS
+      - GOOGLE_USER_INFO_URL=${GOOGLE_USER_INFO_URL}
     ports:
       - "8080:8080"
     networks:
