--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,24 +26,24 @@ jobs:
       - name: Run Tests
         run: make test
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v1
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ vars.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      # - name: Log in to Docker Hub
+      #   uses: docker/login-action@v1
+      #   with:
+      #     username: ${{ vars.DOCKER_USER }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./build/Dockerfile
-          push: true
-          tags: |
-            ${{ vars.APP_REPO }}/${{ vars.APP_NAME }}:${{ github.sha }}
-            ${{ vars.APP_REPO }}/${{ vars.APP_NAME }}:latest
+      # - name: Build and push
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     context: .
+      #     file: ./build/Dockerfile
+      #     push: true
+      #     tags: |
+      #       ${{ vars.APP_REPO }}/${{ vars.APP_NAME }}:${{ github.sha }}
+      #       ${{ vars.APP_REPO }}/${{ vars.APP_NAME }}:latest
 
   deploy:
     name: Deploy in AWS
