--- a/deployments/docker-compose-development.yaml
+++ b/deployments/docker-compose-development.yaml
@@ -2,18 +2,18 @@ version: '3.7'
 
 services:
 
-  # cardapiogo-api:
-  #     build:
-  #       context: ..
-  #       dockerfile: build/Dockerfile
-  #     env_file:
-  #     - ../.env
-  #     ports:
-  #       - "8080:8080"
-  #     depends_on:
-  #       - postgres
-  #     networks:
-  #     - observability
+  cardapiogo-api:
+      build:
+        context: ..
+        dockerfile: build/Dockerfile
+      env_file:
+      - ../.env
+      ports:
+        - "8080:8080"
+      depends_on:
+        - postgres
+      networks:
+      - observability
 
   postgres:
     image: postgres
