--- a/deployments/docker-compose-development.yaml
+++ b/deployments/docker-compose-development.yaml
@@ -1,18 +1,17 @@
-version: '3.7'
+version: "3.7"
 
 services:
-
   cardapiogo-api:
-      build:
-        context: ..
-        dockerfile: build/Dockerfile
-      env_file:
+    build:
+      context: ..
+      dockerfile: build/Dockerfile
+    env_file:
       - ../.env
-      ports:
-        - "8080:8080"
-      depends_on:
-        - postgres
-      networks:
+    ports:
+      - "8080:8080"
+    depends_on:
+      - postgres
+    networks:
       - observability
 
   postgres:
@@ -47,7 +46,7 @@ services:
     volumes:
       - /var/log/journal:/var/log/journal
       - /var/lib/docker/containers:/var/lib/docker/containers:ro
-      - /var/run/docker.sock:/var/run/docker.sock:ro  # Adicione esta linha
+      - /var/run/docker.sock:/var/run/docker.sock:ro # Adicione esta linha
       - ../configs/promtail.yml:/etc/promtail/config.yml
     command: -config.file=/etc/promtail/config.yml
     networks:
@@ -57,7 +56,7 @@ services:
     image: grafana/loki
     ports:
       - 3100:3100
-    command: 
+    command:
       - -config.file=/etc/loki/local-config.yaml
       - -print-config-stderr=true
     networks:
