--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,29 +21,28 @@ jobs:
         run: |
           echo APP_REPO=${{ vars.APP_REPO }} >> .env
           echo APP_NAME=${{ vars.APP_NAME }} >> .env
-          # Repita para cada variável necessária
 
       - name: Run Tests
         run: make test
 
-      # - name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-      # - name: Log in to Docker Hub
-      #   uses: docker/login-action@v1
-      #   with:
-      #     username: ${{ vars.DOCKER_USER }}
-      #     password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ vars.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # - name: Build and push
-      #   uses: docker/build-push-action@v2
-      #   with:
-      #     context: .
-      #     file: ./build/Dockerfile
-      #     push: true
-      #     tags: |
-      #       ${{ vars.APP_REPO }}/${{ vars.APP_NAME }}:${{ github.sha }}
-      #       ${{ vars.APP_REPO }}/${{ vars.APP_NAME }}:latest
+      - name: Build and push API
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./build/Dockerfile
+          push: true
+          tags: |
+            ${{ vars.APP_REPO }}/${{ vars.APP_NAME }}:${{ github.sha }}
+            ${{ vars.APP_REPO }}/${{ vars.APP_NAME }}:latest
 
   deploy:
     name: Deploy in AWS
@@ -76,12 +75,13 @@ jobs:
             git pull origin main
             
             # Definir as variáveis de ambiente
+            export API_HOST="${{ vars.API_HOST }}"
             export API_BASE_PATH="${{ vars.API_BASE_PATH }}"
             export API_ENVIRONMENT="${{ vars.API_ENVIRONMENT }}"
             export API_PORT="${{ vars.API_PORT }}"
             export APP_NAME="${{ vars.APP_NAME }}"
             export APP_REPO="${{ vars.APP_REPO }}"
-            export GOOGLE_REDIRECT_URL="${{ vars.GOOGLE_REDIRECT_URL }}"
+            export GOOGLE_REDIRECT_PATH="${{ vars.GOOGLE_REDIRECT_PATH }}"
             export DB_HOST="${{ secrets.DB_HOST }}"
             export DB_NAME="${{ secrets.DB_NAME }}"
             export DB_USERNAME="${{ secrets.DB_USERNAME }}"
@@ -91,7 +91,6 @@ jobs:
             export GOOGLE_CLIENT_SECRET="${{ secrets.GOOGLE_CLIENT_SECRET }}"
             export JWT_EMISSOR="${{ secrets.JWT_EMISSOR }}"
             export JWT_SECRET="${{ secrets.JWT_SECRET }}"
-            export MIGRATION_SOURCE_URL="${{ vars.MIGRATION_SOURCE_URL }}"
             export GOOGLE_USER_INFO_URL="${{ vars.GOOGLE_USER_INFO_URL }}"
             
             # Subir o ambiente usando docker-compose
