--- a/configs/prometheus.yml
+++ b/configs/prometheus.yml
@@ -4,7 +4,7 @@ global:
 scrape_configs:
   - job_name: 'prometheus'
     static_configs:
-      - targets: ['localhost:9090']
+      - targets: ['prometheus:9090']
   - job_name: 'cardapiogo'
     metrics_path: '/api/v1/metrics'
     static_configs:
