--- a/deployments/docker-compose-development.yaml
+++ b/deployments/docker-compose-development.yaml
@@ -1,18 +1,29 @@
 version: "3.7"
 
 services:
-  # cardapiogo-api:
-  #   build:
-  #     context: ..
-  #     dockerfile: build/Dockerfile
-  #   env_file:
-  #     - ../.env
-  #   ports:
-  #     - "8080:8080"
-  #   depends_on:
-  #     - postgres
-  #   networks:
-  #     - observability
+  cardapiogo-api:
+    build:
+      context: ..
+      dockerfile: build/Dockerfile
+    env_file:
+      - ../.env
+    ports:
+      - "8080:8080"
+    depends_on:
+      - postgres
+    networks:
+      - observability
+
+  nginx:
+    image: nginx:1.25.4-alpine
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ../configs/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ../configs/nginx/cardapiogo.conf:/etc/nginx/http.d/cardapiogo.conf
+    networks:
+      - observability
 
   postgres:
     image: postgres
@@ -32,8 +43,6 @@ services:
     volumes:
       - ../configs/prometheus.yml:/etc/prometheus/prometheus.yml
       - prometheus_data:/prometheus
-    ports:
-      - "9090:9090"
     command:
       - "--config.file=/etc/prometheus/prometheus.yml"
       - "--storage.tsdb.path=/prometheus"
@@ -54,8 +63,6 @@ services:
 
   loki:
     image: grafana/loki
-    ports:
-      - 3100:3100
     command:
       - -config.file=/etc/loki/local-config.yaml
       - -print-config-stderr=true
@@ -64,8 +71,6 @@ services:
 
   grafana:
     image: grafana/grafana
-    ports:
-      - "3000:3000"
     volumes:
       - grafana_data:/var/lib/grafana
     environment:
