--- a/deployments/docker-compose.yaml
+++ b/deployments/docker-compose.yaml
@@ -1,45 +1,16 @@
 version: "3.7"
 
 services:
-  cardapiogo-api:
-    build:
-      context: ..
-      dockerfile: build/Dockerfile
+  postgres:
+    image: postgres
     environment:
-      # APP
-      - APP_REPO=${APP_REPO}
-      - APP_NAME=${APP_NAME}
-      # DATABASE
-      - DB_HOST=${DB_HOST}
-      - DB_PORT=${DB_PORT}
-      - DB_NAME=${DB_NAME}
-      - DB_USERNAME=${DB_USERNAME}
-      - DB_PASSWORD=${DB_PASSWORD}
-      # API
-      - API_PORT=${API_PORT}
-      - API_BASE_PATH=${API_BASE_PATH}
-      - API_ENVIRONMENT=${API_ENVIRONMENT}
-      # JWT
-      - JWT_EMISSOR=${JWT_EMISSOR}
-      - JWT_SECRET=${JWT_SECRET}
-      # OAuth2.0
-      ## GOOGLE
-      - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
-      - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
-      - GOOGLE_REDIRECT_PATH=${GOOGLE_REDIRECT_PATH}
-      ### URLS
-      - GOOGLE_USER_INFO_URL=${GOOGLE_USER_INFO_URL}
-    networks:
-      - observability
-
-  nginx:
-    image: nginx:1.25.4-alpine
+      POSTGRES_DB: postgres
+      POSTGRES_USER: cardapiogo
+      POSTGRES_PASSWORD: cardapiogo
     ports:
-      - "80:80"
-      - "443:443"
+      - "5435:5432"
     volumes:
-      - ../configs/nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ../configs/nginx/cardapiogo.conf:/etc/nginx/http.d/cardapiogo.conf
+      - postgres-data:/var/lib/postgresql/data
     networks:
       - observability
 
@@ -81,7 +52,6 @@ services:
     environment:
       GF_SECURITY_ADMIN_USER: admin
       GF_SECURITY_ADMIN_PASSWORD: admin
-      GF_SERVER_ROOT_URL: "http://localhost/grafana/"
     depends_on:
       - prometheus
       - loki
@@ -89,6 +59,7 @@ services:
       - observability
 
 volumes:
+  postgres-data:
   prometheus_data:
   grafana_data:
 
