--- a/deployments/docker-compose.yaml
+++ b/deployments/docker-compose.yaml
@@ -1,7 +1,6 @@
-version: "3.7"
-
 services:
   postgres:
+    container_name: cardapiogo-postgres
     image: postgres
     environment:
       POSTGRES_DB: postgres
@@ -14,8 +13,48 @@ services:
     networks:
       - observability
 
+  create-keycloak-schema:
+    image: postgres
+    container_name: create-keycloak-schema
+    depends_on:
+      - postgres
+    environment:
+      POSTGRES_DB: postgres
+      POSTGRES_USER: cardapiogo
+      POSTGRES_PASSWORD: cardapiogo
+    command: >
+      sh -c "
+      export PGPASSWORD=$$POSTGRES_PASSWORD;
+      until pg_isready -h postgres -U cardapiogo; do
+        sleep 1;
+      done;
+      psql -h postgres -U cardapiogo -d postgres -c 'CREATE SCHEMA IF NOT EXISTS keycloak;'
+      "
+    networks:
+      - observability
+
+  keycloak:
+    image: quay.io/keycloak/keycloak:24.0.4
+    container_name: cardapiogo-keycloak
+    environment:
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+      KC_DB_URL: jdbc:postgresql://postgres:5432/postgres
+      KC_DB: postgres
+      KC_DB_SCHEMA: keycloak
+      KC_DB_USERNAME: cardapiogo
+      KC_DB_PASSWORD: cardapiogo
+    ports:
+      - 8081:8080
+    command: ["start-dev"]
+    depends_on: 
+      - create-keycloak-schema
+    networks:
+      - observability  
+  
   prometheus:
     image: bitnami/prometheus
+    container_name: cardapiogo-prometheus
     volumes:
       - ../configs/prometheus.yml:/etc/prometheus/prometheus.yml
       - prometheus_data:/prometheus
@@ -28,6 +67,7 @@ services:
 
   promtail:
     image: grafana/promtail
+    container_name: cardapiogo-promtail
     volumes:
       - /var/log/journal:/var/log/journal
       - /var/lib/docker/containers:/var/lib/docker/containers:ro
@@ -39,6 +79,7 @@ services:
 
   loki:
     image: grafana/loki
+    container_name: cardapiogo-loki
     command:
       - -config.file=/etc/loki/local-config.yaml
       - -print-config-stderr=true
@@ -47,6 +88,7 @@ services:
 
   grafana:
     image: grafana/grafana
+    container_name: cardapiogo-grafana
     volumes:
       - grafana_data:/var/lib/grafana
     environment:
