--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ MIGRATION_SOURCE_URL=internal/infra/database/migrations
 
 # API
 API_PORT=8080
-API_BASE_PATH=/api/v1
+API_BASE_PATH=/api
 # Local: debug | prd: release
 GIN_MODE=debug
 
@@ -18,6 +18,11 @@ JWT_SECRET=secret
 
 # OAuth2.0
 
+# Keycloak
+KEYCLOAK_BASE_URL=http://localhost:8081
+KEYCLOAK_REALM=cardapiogo
+KEYCLOAK_CLIENT_ID=cardapiogo
+KEYCLOAK_CLIENT_SECRET=3Dtp2mJWg3iJrOScckJ8bVPJsQHuqyaT
 ## GOOGLE
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
