--- a/configs/sqlc.yaml
+++ b/configs/sqlc.yaml
@@ -14,3 +14,4 @@ sql:
         emit_json_tags: true
         emit_exact_table_names: true
         json_tags_case_style: "snake"
+        emit_sql_as_comment: true
