fix: expose database vars

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,6 +21,7 @@ jobs:
         run: |
           APP_REPO=${{ vars.APP_REPO }} >> .env
           APP_NAME=${{ vars.APP_NAME }} >> .env
+          echo .env
 
       - name: Run Tests
         run: make lint
