--- a/deployments/docker-compose.yaml
+++ b/deployments/docker-compose.yaml
@@ -100,10 +100,25 @@ services:
     networks:
       - observability
 
+  localstack:
+    container_name: "${LOCALSTACK_DOCKER_NAME:-localstack-main}"
+    image: localstack/localstack
+    ports:
+      - "127.0.0.1:4566:4566"            # LocalStack Gateway
+      - "127.0.0.1:4510-4559:4510-4559"  # external services port range
+    environment:
+      # LocalStack configuration: https://docs.localstack.cloud/references/configuration/
+      - DEBUG=${DEBUG:-0}
+      - LOCALSTACK_AUTH_TOKEN=ls-qUzOkajE-9523-geMU-hOWA-9691nUkoa2c1
+    volumes:
+      - localstack_data:/var/lib/localstack"
+      - localstack_data:/var/run/docker.sock"
+
 volumes:
   postgres-data:
   prometheus_data:
   grafana_data:
+  localstack_data:
 
 networks:
   observability:
