fix: remove panics with keycloak

--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,26 @@
 # DATABASE
 DB_HOST=localhost
-DB_PORT=5435
+DB_PORT=5432
 DB_NAME=postgres
 DB_USERNAME=cardapiogo
 DB_PASSWORD=cardapiogo
-MIGRATION_SOURCE_URL=internal/infra/database/migrations
 
 # API
-API_PORT=8080
+API_PORT=3000
 API_BASE_PATH=/api
-# Local: debug | prd: release
+
+# release | debug
 GIN_MODE=debug
 
-# JWT
-JWT_EMISSOR=cardapiogo
-JWT_SECRET=secret
-
-# OAuth2.0
+# production | staging | local
+ENVIRONMENT=local
+SQLCDEBUG=1
 
 # Keycloak
-KEYCLOAK_BASE_URL=http://localhost:8081
+KEYCLOAK_BASE_URL=http://localhost:8080
 KEYCLOAK_REALM=cardapiogo
 KEYCLOAK_CLIENT_ID=cardapiogo
-KEYCLOAK_CLIENT_SECRET=3Dtp2mJWg3iJrOScckJ8bVPJsQHuqyaT
+KEYCLOAK_CLIENT_SECRET=*********
 ## GOOGLE
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
@@ -30,6 +28,17 @@ GOOGLE_REDIRECT_URL=http://localhost:8080/api/v1/auth/callback
 ### URLS
 GOOGLE_USER_INFO_URL=https://www.googleapis.com/userinfo/v2/me
 
+# Email server
+# Resend
+RESEND_API_KEY=***********
 
+# AWS
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=test
+AWS_SECRET_ACCESS_KEY=test
+AWS_SESSION_TOKEN=test
+
+# LocalStack
+LOCALSTACK_API_KEY=**************
 
 
